--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-    "C_Cpp.errorSquiggles": "Enabled"
+    "C_Cpp.errorSquiggles": "Enabled",
+    "files.associations": {
+        "stdexcept": "cpp",
+        "iosfwd": "cpp",
+        "vector": "cpp",
+        "iomanip": "cpp"
+    }
 }
